@@ -17,37 +17,52 @@ What is the PHP/Java bridge?
 
   * new java("CLASSNAME"): Instanciates or references the class
     CLASSNAME. After script execution the referenced classes may be
-    garbage collected. That means that static classes cannot be used to
-    hold session data unless the session keeps a reference to them. In any
-    case it is better to use a java.util.Properties object or a database
-    to store session data.
-     <?php
-     java_set_library_path("file:c:/mytest.jar");
-     $mytest = new java("mytest");
-     // count() increments and returns the value of a static variable
-     print $mytest->count();
-     print $mytest->count();
-     java_set_library_path("");
-     $mytest = new java("mytest");
-     print $mytest->count();
-     ?>
-     ==> 1 2 3
-     <?php
-     java_set_library_path("file:c:/mytest.jar");
-     $mytest = new java("mytest");
-     print $mytest->count();
-     ?>
-     ==> Result undefined, may either be 1 or 4.
+    garbage collected. Examples:
+
+      $String = new java("java.lang.String");
+      print $String->valueOf(null);
+
+      $hello = new java("java.lang.String", "hello")
+      print $hello;
 
   * java_set_library_path("JAR1;JAR2"): Makes additional libraries
     available to the current script. JAR can either be a "http:", "ftp:",
-    "file:" or a "jar:" location.
+    "file:" or a "jar:" location. Example:
+     
+      $file=new java("java.io.File", "WEB_INF/web.xml");
+
+      java_set_library_path("file:c:/xerces.jar;http://localhost/jdom.jar");
+      $builder = new java("org.jdom.input.SAXBuilder");
+      $doc = $builder->build($file);
+      $root = $doc->getRootElement();
+      $servlets = $root->getChildren("servlet");
+      java_set_library_path("");
+
+      echo "this file has " . $servlets->size() . " servlets\n";
+
+  * java_exception: A java exception class. Available in PHP 5 and
+    above only. Example:
+
+      try {
+       new java("java.lang.String", null);
+      } catch(java_exception $ex) {
+         $trace = new java("java.io.ByteArrayOutputStream");
+         $ex->printStackTrace(new java("java.io.PrintStream", $trace));
+         print "java stack trace: $trace\n";
+      }
 
   * java_last_exception_get(): Returns the last exception instance or
-    null. Since PHP 5 you can use try/catch instead.
+    null. Example:
 
-  * java_last_exception_clear(): Clears the error condition. Since PHP
-    5 you can use try/catch instead.
+      if(java_last_exception_get()) 
+        java_last_exception_get()->toString();
+
+  * java_last_exception_clear(): Clears the error condition. Example:
+
+      java_last_exception_clear();
+      while(!java_last_exception_get()) {
+        ...
+      }
 
   There is one example provided: test.php.  You can either invoke the
   test.php by typing ./test.php or copy the example into the document
